--- a/dilmure/2.html
+++ b/dilmure/2.html
@@ -1,98 +1,412 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dilmure – Millet Snacks</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dilmure – Millet Snacks</title>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Fredoka+One&display=swap" rel="stylesheet">
+    <!-- Playful Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@600;800&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!-- Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
 
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+    <style>
+      /* --- GLOBAL STYLES (Basic reset for the code you provided) --- */
+      body {
+        margin: 0;
+        font-family: "Baloo 2", cursive;
+        background-color: #fcfbf2; /* Creamy background from your design */
+        color: #333;
+      }
 
-<!-- HEADER -->
-<header class="header">
+      /* Navigation styles (Basic styling to make it look good) */
+      .header-box {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 20px 40px;
+        background: white;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+      }
+      .logo {
+        font-size: 24px;
+        font-weight: 800;
+        color: #d32f2f;
+      }
+      .nav a {
+        margin: 0 15px;
+        text-decoration: none;
+        color: #333;
+        font-weight: 600;
+      }
+      .right-icons i {
+        margin-left: 15px;
+        cursor: pointer;
+      }
 
-  <!-- Logo -->
-  <div class="logo">DILMURE</div>
+      /* Section Spacing */
+      section {
+        padding: 40px 20px;
+        text-align: center;
+      }
 
-  <!-- Menu -->
-  <nav class="nav">
-    <a href="#home">Home</a>
-    <a href="#about">About Us</a>
-    <a href="#products">Product</a>
-  </nav>
+      /* Red Sections (Why Dilmure / Story) */
+      .red-section {
+        background-color: #d32f2f;
+        padding: 50px;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px;
+      }
+      .white-box {
+        background: white;
+        padding: 40px;
+        border-radius: 20px;
+        max-width: 800px;
+        text-align: left;
+        display: flex;
+        align-items: center;
+        gap: 20px;
+      }
+      .white-box h2 {
+        color: #d32f2f;
+        margin-top: 0;
+      }
 
-  <!-- Right Side Icons -->
-  <div class="header-right">
+      /* --- THE NEW HEART SECTION STYLES --- */
 
-      <!-- Search Box -->
-      <div class="search-box">
-        <i class="fas fa-search" style="color:#ff3b3f;"></i>
-        <input type="text" placeholder="Search">
+      .heart-section {
+        position: relative;
+        /* Make sure the section is tall enough to fit the big heart */
+        min-height: 800px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        padding-top: 50px;
+        overflow: hidden; /* Hides the heart if it gets too wide */
+      }
+
+      .heart-section h2 {
+        font-size: 3rem;
+        color: #c52b2b;
+        margin-bottom: 20px;
+        z-index: 0; /* Ensure text is above background */
+        position: relative;
+      }
+
+      /* 1. The Heart Background Container */
+      .heart-background-container {
+        position: absolute;
+        top: 100px; /* Adjust this to move the heart up/down */
+        left: 50%;
+        transform: translateX(-50%);
+        width: 550px; /* Size of the heart */
+        height: 550px;
+        z-index: 1; /* Behind the products */
+        pointer-events: none;
+      }
+
+      /* 2. The Sunburst Pattern & Mask */
+      .heart-sunburst {
+        width: 100%;
+        height: 100%;
+
+        /* Sunburst Gradient */
+        background: repeating-conic-gradient(
+          from 0deg at 50% 35%,
+          #dc2626 0deg 15deg,
+          /* Brighter Red */ #b91c1c 15deg 30deg /* Darker Red */
+        );
+
+        /* SVG Heart Mask */
+        -webkit-mask-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 512 512' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z'/%3E%3C/svg%3E");
+        mask-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 512 512' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z'/%3E%3C/svg%3E");
+
+        -webkit-mask-repeat: no-repeat;
+        mask-repeat: no-repeat;
+        -webkit-mask-position: center;
+        mask-position: center;
+        -webkit-mask-size: contain;
+        mask-size: contain;
+      }
+
+      /* 3. The Product Container Grid */
+      .products-container {
+        position: relative;
+        z-index: 10; /* Above the heart */
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-top: 60px; /* Push products down into the heart */
+        width: 100%;
+        max-width: 1000px;
+      }
+
+      .product-item {
+        transition: transform 0.3s ease;
+      }
+
+      /* Styles for the images themselves */
+      .product-item img {
+        display: block;
+        width: 100%;
+        height: auto;
+        filter: drop-shadow(
+          0 10px 15px rgba(0, 0, 0, 0.3)
+        ); /* Shadow for depth */
+      }
+
+      /* Specific sizing and rotation for Left/Right/Center */
+
+      /* Left Bag (Minty) */
+      .product-left {
+        width: 200px;
+        transform: rotate(-5deg) translateY(20px);
+      }
+
+      /* Center Bag (Peri Peri - Bigger) */
+      .product-center {
+        width: 280px;
+        transform: scale(1.1);
+        z-index: 15; /* Top most */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      /* Right Bag (Tomato) */
+      .product-right {
+        width: 200px;
+        transform: rotate(5deg) translateY(20px);
+      }
+
+      /* Navigation Arrows for Center Product */
+      .nav-arrows {
+        margin-top: 15px;
+        color: white;
+        font-size: 1.2rem;
+        font-weight: bold;
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+      }
+      .nav-arrows span {
+        cursor: pointer;
+      }
+
+      /* Responsive adjustments for mobile */
+      @media (max-width: 768px) {
+        .heart-background-container {
+          width: 100%;
+          height: 400px;
+          top: 50px;
+        }
+        .products-container {
+          flex-direction: column; /* Stack vertically on phone */
+          margin-top: 20px;
+        }
+        .product-center {
+          order: -1;
+          margin-bottom: 20px;
+        } /* Put center item first on mobile */
+      }
+    </style>
+  </head>
+  <body>
+    <!-- Top decoration bar (optional) -->
+    <section
+      class="top-bg"
+      style="height: 10px; background: #d32f2f; padding: 0"
+    ></section>
+
+    <header class="header-box">
+      <div class="logo">DILMURE</div>
+
+      <nav class="nav">
+        <a href="#home">Home</a>
+        <a href="#about">About Us</a>
+        <a href="#products">Product</a>
+      </nav>
+
+      <div class="right-icons">
+        <i class="fas fa-user"></i>
+        <i class="fas fa-search"></i>
+        <i class="fas fa-shopping-cart"></i>
+      </div>
+    </header>
+
+    <section class="hero" id="home">
+      <!-- Added placeholder style for missing image -->
+      <img
+        src="packet.jpeg"
+        class="hero-img"
+        alt="Packet Image"
+        style="max-width: 300px; display: block; margin: 0 auto"
+      />
+    </section>
+
+    <section class="ingredients-section">
+      <h2>Real Ingredients. Nothing Artificial.</h2>
+      <p>Wholesome millet snacks made with clean, natural ingredients.</p>
+
+      <img
+        src="bowl.png"
+        alt="Millet Bowl"
+        class="bowl-img"
+        style="max-width: 200px"
+      />
+
+      <div
+        class="badges"
+        style="
+          display: flex;
+          justify-content: center;
+          gap: 10px;
+          flex-wrap: wrap;
+          margin-top: 20px;
+        "
+      >
+        <div
+          class="badge"
+          style="
+            background: #4caf50;
+            color: white;
+            padding: 5px 15px;
+            border-radius: 20px;
+          "
+        >
+          Cholesterol Free
+        </div>
+        <div
+          class="badge"
+          style="
+            background: #4caf50;
+            color: white;
+            padding: 5px 15px;
+            border-radius: 20px;
+          "
+        >
+          Trans Fat Free
+        </div>
+        <div
+          class="badge"
+          style="
+            background: #4caf50;
+            color: white;
+            padding: 5px 15px;
+            border-radius: 20px;
+          "
+        >
+          No MSG
+        </div>
+        <div
+          class="badge"
+          style="
+            background: #4caf50;
+            color: white;
+            padding: 5px 15px;
+            border-radius: 20px;
+          "
+        >
+          No Added Preservatives
+        </div>
+      </div>
+    </section>
+
+    <!-- WHY DILMURE -->
+    <section class="red-section">
+      <div class="white-box">
+        <div class="why-content">
+          <div class="why-text">
+            <h2>WHY DILMURE</h2>
+            <p>
+              Dilmure brings great taste, clean ingredients, and everyday trust
+              all in one snack. Our millet-based puffs are light,
+              flavor-forward, and consistently better than regular junk.
+            </p>
+          </div>
+          <img
+            src="question.jpeg"
+            class="why-img"
+            alt="Why us"
+            style="
+              width: 100px;
+              height: 100px;
+              object-fit: cover;
+              border-radius: 50%;
+            "
+          />
+        </div>
+      </div>
+    </section>
+
+    <!-- OUR STORY -->
+    <section class="red-section">
+      <div class="white-box">
+        <div>
+          <h2>OUR STORY</h2>
+          <p class="story-text">
+            Dilmure was born from the nostalgia of India's favorite crunchy
+            snack, reimagined for today. We wanted childhood comfort with
+            cleaner, millet-based, guilt-free goodness.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- *** MODIFIED HEART SECTION *** -->
+    <section class="heart-section" id="products">
+      <h2>MEET OUR HEART</h2>
+
+      <!-- The Background Heart (Positioned Absolute) -->
+      <div class="heart-background-container">
+        <div class="heart-sunburst"></div>
       </div>
 
-      <!-- Cart Icon -->
-      <i class="fas fa-shopping-cart"></i>
+      <!-- The Products (Positioned Relative) -->
+      <div class="products-container">
+        <!-- Left Product: Minty Pudina -->
+        <div class="product-item product-left">
+          <img src="mintypudinamockup.jpeg" alt="Minty Pudina" />
+        </div>
 
-      <!-- User Icon -->
-      <i class="fas fa-user"></i>
-  </div>
+        <!-- Center Product: Peri Peri (Bigger) -->
+        <div class="product-item product-center">
+          <img src="periperimockup.jpeg" alt="Fiery Peri Peri" />
+          <!-- Navigation Text inside the heart, below the bag -->
+          <div class="nav-arrows">
+            <span>&lt;</span> Fiery Peri-Peri <span>&gt;</span>
+          </div>
+        </div>
 
-</header>
+        <!-- Right Product: Packet 3 -->
+        <div class="product-item product-right">
+          <img src="tomatocheesemockup.jpeg" alt="Tomato Cheese" />
+        </div>
+      </div>
+    </section>
 
-<!-- HERO -->
-<section class="hero" id="home">
-  <img src="packets.png" alt="Snack Packets" class="hero-img">
-</section>
-
-<!-- INGREDIENTS -->
-<section class="ingredients-section">
-  <h2>Real Ingredients. Nothing Artificial.</h2>
-  <p>Wholesome millet snacks made with clean, natural ingredients.</p>
-
-  <img src="bowl.png" class="bowl-img">
-
-  <div class="badges">
-    <div class="badge">Cholesterol Free</div>
-    <div class="badge">Trans Fat Free</div>
-    <div class="badge">No MSG</div>
-    <div class="badge">No Added Preservatives</div>
-  </div>
-</section>
-
-<!-- WHY -->
-<section class="why-section" id="about">
-  <h2>WHY DILMURE</h2>
-  <p>Flavor-first, guilt-free snacks crafted for modern snacking.</p>
-</section>
-
-<!-- STORY -->
-<section class="story-section">
-  <h2>OUR STORY</h2>
-  <p>Inspired by nostalgic Indian snacks, reimagined with millet for a healthier future.</p>
-</section>
-
-<!-- HEART SECTION -->
-<section class="heart-section" id="products">
-  <h2>MEET OUR HEART</h2>
-
-  <div class="heart">
-    <img src="packet1.png" class="heart-item">
-    <img src="packet2.png" class="heart-item">
-    <img src="packet3.png" class="heart-item">
-  </div>
-</section>
-
-<!-- FOOTER -->
-<footer class="footer">
-  Follow us on Social Media
-</footer>
-
-</body>
+    <footer
+      class="footer"
+      style="
+        padding: 20px;
+        text-align: center;
+        color: #d32f2f;
+        font-weight: bold;
+        margin-top: 50px;
+      "
+    >
+      <p>OUR SOCIAL MEDIA</p>
+    </footer>
+  </body>
 </html>
