--- a/dilmure/dilmure.html
+++ b/dilmure/dilmure.html
@@ -1,104 +1,547 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dilmure – Millet Snacks</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dilmure – Millet Snacks</title>
 
-  <!-- Playful Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@600&display=swap" rel="stylesheet">
+    <!-- Playful Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- Tailwind (used for utility classes in the heart section mainly, but helps layout) -->
+    <script src="https://cdn.tailwindcss.com"></script>
 
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+    <!-- Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
 
-<section class="top-bg"></section>
+    <style>
+      /* =========================================
+           GLOBAL STYLES (Put this in style.css)
+           ========================================= */
+      :root {
+        --bg-cream: #fffdf5;
+        --heart-red-dark: #c62828;
+        --heart-red-light: #d32f2f;
+        --dilmure-red: #d32f2f;
+        --text-dark: #333;
+      }
 
-<header class="header-box">
-    <div class="logo">DILMURE</div>
+      body {
+        background-color: var(--bg-cream);
+        font-family: "Baloo 2", "Fredoka", sans-serif;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden;
+        color: var(--text-dark);
+      }
 
-    <nav class="nav">
-      <a href="#home">Home</a>
-      <a href="#about">About Us</a>
-      <a href="#products">Product</a>
-    </nav>
+      h2 {
+        font-family: "Fredoka", sans-serif;
+        font-weight: 700;
+        color: var(--dilmure-red);
+        text-transform: uppercase;
+      }
 
-    <div class="right-icons">
-      <i class="fas fa-user"></i>
-      <i class="fas fa-search"></i>
-      <i class="fas fa-shopping-cart"></i>
-    </div>
-</header>
+      /* --- Header --- */
+      .header-box {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 1rem 2rem;
+        background: white;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+        position: sticky;
+        top: 0;
+        z-index: 100;
+      }
 
-<section class="hero" id="home">
-  <img src="packet.jpeg" class="hero-img">
-</section>
+      .logo {
+        font-size: 1.8rem;
+        font-weight: 800;
+        color: var(--dilmure-red);
+        font-family: "Fredoka", sans-serif;
+      }
 
+      .nav a {
+        text-decoration: none;
+        color: #555;
+        font-weight: 600;
+        margin: 0 1rem;
+        font-size: 1.1rem;
+        transition: color 0.3s;
+      }
 
-<section class="ingredients-section">
-  <h2>Real Ingredients. Nothing Artificial.</h2>
-  <p>Wholesome millet snacks made with clean, natural ingredients.</p>
+      .nav a:hover {
+        color: var(--dilmure-red);
+      }
 
-  <img src="bowl.png" alt="Millet Bowl" class="bowl-img" />
+      .right-icons i {
+        margin-left: 1rem;
+        color: var(--dilmure-red);
+        cursor: pointer;
+        font-size: 1.2rem;
+      }
 
-  <div class="badges">
-    <div class="badge">Cholesterol Free</div>
-    <div class="badge">Trans Fat Free</div>
-    <div class="badge">No MSG</div>
-    <div class="badge">No Added Preservatives</div>
-  </div>
-</section>
+      /* --- Hero Section --- */
+      .hero {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 4rem 1rem;
+        background-color: #fcece3; /* Light peach fallback */
+        min-height: 400px;
+      }
 
-<!-- WHY DILMURE -->
-<section class="red-section">
-  <div class="white-box" style="margin-left: 2px">
-    <div class="why-content">
-      <div class="why-text">
-        <h2>WHY DILMURE</h2>
-        <p>Dilmure brings great taste, clean ingredienes, and everydlay trust all in one
-          snack. Our mililet-base3 putty are Ighe, fiora+-forwars, and consistently better
-          than regular junk, without compromising the: experience. A blend of Qualty.
-          reilability, and modern snacking erarted to feel comforting yit contemporany
-          We bring qualtx, relablitx, and modera anasking togsther, comfortig
-          yet contemporary</p>
+      .hero-img {
+        max-width: 100%;
+        height: auto;
+        max-height: 400px;
+        filter: drop-shadow(0 10px 20px rgba(0, 0, 0, 0.2));
+      }
+
+      /* --- Ingredients Section --- */
+      .ingredients-section {
+        text-align: center;
+        padding: 4rem 1rem;
+        background: var(--bg-cream);
+      }
+
+      .ingredients-section h2 {
+        font-size: 2.5rem;
+        margin-bottom: 0.5rem;
+      }
+
+      .bowl-img {
+        max-width: 300px;
+        margin: 2rem auto;
+        display: block;
+      }
+
+      .badges {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 1rem;
+      }
+
+      .badge {
+        background: #fff;
+        border: 2px solid var(--dilmure-red);
+        color: var(--dilmure-red);
+        padding: 0.5rem 1rem;
+        border-radius: 50px;
+        font-weight: 600;
+        font-size: 0.9rem;
+      }
+
+      /* --- Red Sections (Why Dilmure & Our Story) --- */
+      .red-section {
+        background-color: var(--dilmure-red);
+        padding: 4rem 2rem;
+        display: flex;
+        justify-content: center;
+      }
+
+      .white-box {
+        background: white;
+        border-radius: 20px;
+        padding: 3rem;
+        max-width: 1000px;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2);
+      }
+
+      .why-content {
+        display: flex;
+        align-items: center;
+        gap: 2rem;
+        width: 100%;
+      }
+
+      /* Responsive adjustments for boxes */
+      @media (max-width: 768px) {
+        .white-box,
+        .why-content {
+          flex-direction: column;
+          text-align: center;
+        }
+        .nav {
+          display: none;
+        } /* Simplified mobile nav hide */
+      }
+
+      .why-img {
+        width: 250px;
+        border-radius: 10px;
+      }
+
+      /* =========================================
+           HEART SECTION STYLES (Copy this specifically)
+           ========================================= */
+
+      /* 1. Container Setup */
+      .heart-section {
+        position: relative;
+        width: 100%;
+        height: 900px; /* Tall enough for the heart */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        background-color: var(--bg-cream);
+        margin-top: 2rem;
+      }
+
+      .heart-section h2 {
+        position: relative;
+        z-index: 20;
+        font-size: 3.5rem;
+        margin-bottom: 2rem;
+        text-align: center;
+        text-shadow: 2px 2px 0px #fff;
+      }
+
+      /* 2. The Heart Mask & Sunburst */
+      .heart-mask {
+        position: absolute;
+        top: 55%; /* Adjusted slightly to center visually with text */
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 900px;
+        height: 800px;
+        z-index: 1;
+
+        /* The magic mask */
+        -webkit-mask: url("data:image/svg+xml,%3Csvg viewBox='0 0 512 512' width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z'/%3E%3C/svg%3E")
+          no-repeat center;
+        mask: url("data:image/svg+xml,%3Csvg viewBox='0 0 512 512' width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z'/%3E%3C/svg%3E")
+          no-repeat center;
+        -webkit-mask-size: contain;
+        mask-size: contain;
+      }
+
+      .sunburst-pattern {
+        width: 100%;
+        height: 100%;
+        background: repeating-conic-gradient(
+          from 0deg,
+          var(--heart-red-dark) 0deg 15deg,
+          var(--heart-red-light) 15deg 30deg
+        );
+        animation: spin 60s linear infinite; /* Optional: Slow spin effect */
+      }
+
+      @keyframes spin {
+        from {
+          transform: rotate(0deg);
+        }
+        to {
+          transform: rotate(360deg);
+        }
+      }
+
+      /* 3. Product Layout */
+      .products-wrapper {
+        position: relative;
+        z-index: 10;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 3rem; /* Space between packets */
+        width: 100%;
+        max-width: 1200px;
+        padding: 0 1rem;
+      }
+
+      .product-card {
+        transition: all 0.4s ease-out;
+        position: relative;
+      }
+
+      /* Side Cards Styles */
+      .card-side {
+        width: 220px;
+        transform: scale(0.85) translateY(20px);
+        opacity: 0.9;
+        filter: blur(0.5px);
+        cursor: pointer;
+      }
+
+      .card-side:hover {
+        transform: scale(0.9) translateY(10px);
+        opacity: 1;
+        filter: blur(0);
+      }
+
+      /* Center Card Styles (The Hero) */
+      .card-center {
+        width: 300px; /* Larger */
+        transform: scale(1.1);
+        z-index: 20;
+        filter: drop-shadow(0 25px 50px rgba(0, 0, 0, 0.4));
+      }
+
+      /* Image Styling mimicking packets */
+      .packet-mock {
+        width: 100%;
+        border-radius: 12px;
+        display: block;
+      }
+
+      /* Navigation Controls below center packet */
+      .nav-controls {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 1.5rem;
+        color: white;
+        margin-top: 3.5rem; /* Push down from packet */
+        z-index: 20;
+        font-size: 1.5rem;
+        font-weight: 700;
+        text-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+        font-family: "Fredoka", sans-serif;
+        letter-spacing: 1px;
+      }
+
+      .nav-arrow {
+        cursor: pointer;
+        transition: transform 0.2s;
+        background: rgba(255, 255, 255, 0.2);
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+      }
+
+      .nav-arrow:hover {
+        transform: scale(1.1);
+        background: rgba(255, 255, 255, 0.4);
+      }
+
+      /* Mobile Responsive for Heart Section */
+      @media (max-width: 768px) {
+        .heart-mask {
+          width: 120%; /* Overflow edges on mobile */
+          height: 600px;
+        }
+        .products-wrapper {
+          flex-direction: column;
+          gap: 2rem;
+        }
+        .card-side {
+          display: none; /* Hide side cards on small mobile for clean look */
+        }
+        .card-center {
+          width: 240px;
+          transform: scale(1);
+        }
+        .heart-section h2 {
+          font-size: 2.5rem;
+        }
+      }
+
+      /* --- Footer --- */
+      .footer {
+        text-align: center;
+        padding: 2rem;
+        background: #f8f8f8;
+        margin-top: 2rem;
+      }
+
+      .social-title {
+        color: var(--dilmure-red);
+        font-weight: 800;
+        font-size: 2rem;
+        margin-bottom: 1rem;
+      }
+    </style>
+  </head>
+  <body>
+    <section class="top-bg"></section>
+
+    <header class="header-box">
+      <div class="logo">DILMURE</div>
+
+      <nav class="nav">
+        <a href="#home">Home</a>
+        <a href="#about">About Us</a>
+        <a href="#products">Product</a>
+      </nav>
+
+      <div class="right-icons">
+        <i class="fas fa-user"></i>
+        <i class="fas fa-search"></i>
+        <i class="fas fa-shopping-cart"></i>
+      </div>
+    </header>
+
+    <section class="hero" id="home">
+      <!-- Placeholder for packet.jpeg -->
+      <img
+        src="packet.jpeg"
+        class="hero-img"
+        alt="Packet"
+      />
+    </section>
+
+    <section class="ingredients-section">
+      <h2>Real Ingredients. Nothing Artificial.</h2>
+      <p>Wholesome millet snacks made with clean, natural ingredients.</p>
+
+      <!-- Placeholder for bowl.png -->
+      <img
+        src="bowl.png"
+        alt="Millet Bowl"
+        class="bowl-img"
+        style="border-radius: 50%"
+      />
+
+      <div class="badges">
+        <div class="badge">Cholesterol Free</div>
+        <div class="badge">Trans Fat Free</div>
+        <div class="badge">No MSG</div>
+        <div class="badge">No Added Preservatives</div>
+      </div>
+    </section>
+
+    <!-- WHY DILMURE -->
+    <section class="red-section" id="about">
+      <div class="white-box">
+        <div class="why-content">
+          <div class="why-text">
+            <h2>WHY DILMURE</h2>
+            <p>
+              Dilmure brings great taste, clean ingredients, and everyday trust
+              all in one snack. Our millet-based puffs are light,
+              flavor-forward, and consistently better than regular junk, without
+              compromising the experience. A blend of quality, reliability, and
+              modern snacking crafted to feel comforting yet contemporary.
+            </p>
+          </div>
+          <!-- Placeholder for question.jpeg -->
+          <img
+            src="question.jpeg"
+            class="why-img"
+            alt="Why Dilmure"
+          />
+        </div>
+      </div>
+    </section>
+
+    <!-- OUR STORY -->
+    <section class="red-section">
+      <div class="white-box">
+        <div>
+          <h2>OUR STORY</h2>
+          <p class="story-text">
+            Dilmure was born from the nostalgia of India's favorite crunchy
+            snack, reimagined for today. We wanted childhood comfort with
+            cleaner, millet-based, guilt-free goodness. What began as
+            home-kitchen experiments soon became a movement loved by friends,
+            campuses, cafés, and youth everywhere. Our mission is simple: to
+            make better snacks that still feel like home.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- *** UPDATED HEART SECTION START *** -->
+    <!-- Copy this section into your HTML -->
+    <section class="heart-section" id="products">
+      <!-- 1. The Heading -->
+      <h2
+        class="text-4xl md:text-5xl font-bold mb-4 z-10 relative mt-10 tracking-wide"
+      >
+        MEET OUR HEART
+      </h2>
+
+      <!-- 2. The Heart Background with Sunburst -->
+      <div class="heart-mask">
+        <div class="sunburst-pattern"></div>
       </div>
 
-      <img src="question.jpeg" class="why-img">
-    </div>
-  </div>
-</section>
+      <!-- 3. The Products Wrapper -->
+      <div class="products-wrapper">
+        <!-- Left Product: Minty Pudina -->
+        <div class="product-card card-side hidden md:block">
+          <!-- Replace with src="mintypudinamockup.jpeg" -->
+          <div
+            class="relative w-full aspect-[3/4] bg-emerald-800 rounded-xl overflow-hidden shadow-xl border-t-4 border-b-4 border-emerald-900 flex flex-col items-center justify-center p-4"
+          >
+            <img
+              src="mintypudinamockup.jpeg"
+              class="packet-mock"
+              alt="Minty Pudina"
+            />
+          </div>
+        </div>
 
-<!-- OUR STORY -->
-<section class="red-section">
-  <div class="white-box" style="margin-right: 100;">
-    <h2>OUR STORY</h2>
-    <p class="story-text">
-      Dimure was born from the nostalgic of India's favorite crunchy
-      snack, reimagined for todhy. we manted childhood comfort with
-      cleane, minet-baseo, fiver-peches, puit-free goodness
-      What began as home-aintchet erperiments soon became 
-      movement loved by friends, campuses, cafés, and youth everywhere
-      Our mission Is simple to make better snacks that s0il feet like-home      
-    </p>
-  </div>
-</section>
+        <!-- Center Product: Fiery Peri-Peri (Active) -->
+        <div class="product-card card-center">
+          <!-- Replace with src="periperimockup.jpeg" -->
+          <div
+            class="relative w-full aspect-[3/4] bg-red-600 rounded-xl overflow-hidden shadow-2xl border-t-4 border-b-4 border-red-800 flex flex-col items-center justify-center p-4"
+          >
+            <img
+              src="periperimockup.jpeg"
+              class="packet-mock"
+              alt="Fiery Peri Peri"
+            />
 
-<section class="heart-section" id="products">
-  <h2>MEET OUR HEART</h2>
+            <!-- Floating Chili Badge -->
+            <div class="absolute top-4 right-4 text-3xl drop-shadow-md">🌶️</div>
+          </div>
+        </div>
 
-  <div class="heart">
-    <img src="packet1.png" class="heart-item" />
-    <img src="packet2.png" class="heart-item" />
-    <img src="packet3.png" class="heart-item" />
-  </div>
-</section>
+        <!-- Right Product: Tomato Cheese -->
+        <div class="product-card card-side hidden md:block">
+          <!-- Replace with src="packet3.png" -->
+          <div
+            class="relative w-full aspect-[3/4] bg-amber-400 rounded-xl overflow-hidden shadow-xl border-t-4 border-b-4 border-amber-600 flex flex-col items-center justify-center p-4"
+          >
+            <img
+              src="tomatocheesemockup.jpeg"
+              class="packet-mock"
+              alt="Tomato Cheese"
+            />
+          </div>
+        </div>
+      </div>
 
-<footer class="footer">
-  <p>Our Social Media</p>
-</footer>
+      <!-- 4. Navigation Controls -->
+      <div class="nav-controls">
+        <div class="nav-arrow"><i class="fas fa-chevron-left"></i></div>
+        <span>Fiery Peri-Peri</span>
+        <div class="nav-arrow"><i class="fas fa-chevron-right"></i></div>
+      </div>
+    </section>
+    <!-- *** UPDATED HEART SECTION END *** -->
 
-</body>
+    <footer class="footer">
+      <h2 class="social-title">OUR SOCIAL MEDIA</h2>
+      <!-- Social Icons Placeholder -->
+      <div class="flex justify-center gap-4 text-2xl text-red-700">
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter"></i>
+      </div>
+    </footer>
+  </body>
 </html>
